--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "framer-motion": "^11.16.0",
+    "locomotive-scroll": "^4.1.4",
+    "motion": "^11.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0"
