--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.16.0",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "motion": "^11.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
